--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <section class="coming-soon">
+      <div>
+        <h2>Time Until Eurovision 2022!</h2>
+        <div class="countdown">
+          <div class="container-day">
+            <h3 class="day">Time</h3>
+            <h3>Day</h3>
+          </div>
+          <div class="container-hour">
+            <h3 class="hour">Time</h3>
+            <h3>Hours</h3>
+          </div>
+          <div class="container-minute">
+            <h3 class="minute">Time</h3>
+            <h3>Minute</h3>
+          </div>
+          <div class="container-second">
+            <h3 class="second">Time</h3>
+            <h3>Seconds</h3>
+          </div>
+        </div>
+        <img src="https://pix.eurovisionworld.com/grafik/2022/logo/eurovision-2022-italy.jpg">
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
