--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Eurovision Song Contest 2020 Countdown</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <section class="coming-soon">
       <div>
-        <h2>Time Until Eurovision 2022!</h2>
+        <h2 class="countdown-title">Countdown to the...</h2>
+        <img class="eurovision2022logo" src="https://pix.eurovisionworld.com/grafik/2022/logo/eurovision-2022-italy.jpg">
         <div class="countdown">
           <div class="container-day">
             <h3 class="day">Time</h3>
-            <h3>Day</h3>
+            <h3>Days</h3>
           </div>
           <div class="container-hour">
             <h3 class="hour">Time</h3>
@@ -21,14 +22,14 @@
           </div>
           <div class="container-minute">
             <h3 class="minute">Time</h3>
-            <h3>Minute</h3>
+            <h3>Minutes</h3>
           </div>
           <div class="container-second">
             <h3 class="second">Time</h3>
             <h3>Seconds</h3>
           </div>
-        </div>
-        <img src="https://pix.eurovisionworld.com/grafik/2022/logo/eurovision-2022-italy.jpg">
+        </div>  
+      </div>
     </section>
     <script src="script.js"></script>
   </body>
