--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="coming-soon">
       <div>
-        <h2 class="countdown-title">Countdown to the...</h2>
+        <!--<h2 class="countdown-title">Countdown to the...</h2>-->
         <img class="eurovision2022logo" src="https://pix.eurovisionworld.com/grafik/2022/logo/eurovision-2022-italy.jpg">
         <div class="countdown">
           <div class="container-day">
